added padding to aside element

--- a/style.css
+++ b/style.css
@@ -71,6 +71,7 @@ section {
 	float: right;
 	width: 46%;
 	height: 274px;
+	padding:30px;
 	margin-top: 20px;
 	margin-left: 20px;
 	background:#ebebeb;
